--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -74,6 +74,7 @@
                     <connections>
                         <outlet property="aboutButton" destination="DK1-78-TZw" id="h2H-fF-4kW"/>
                         <outlet property="highscoresButton" destination="mLs-Sb-4bu" id="DIy-23-wey"/>
+                        <outlet property="mainTitleLabel" destination="51U-w5-j4s" id="c4B-pm-pjZ"/>
                         <outlet property="playButton" destination="05A-PZ-Igw" id="NRD-75-EVq"/>
                         <segue destination="mr7-6u-u8H" kind="push" identifier="Play Session" id="2Qs-Mk-nxy"/>
                     </connections>
@@ -338,6 +339,39 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Cx3-gP-Fou"/>
                                 </items>
                             </toolbar>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="L6L-gP-Asl">
+                                <rect key="frame" x="20" y="20" width="280" height="208"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <attributedString key="attributedText">
+                                    <fragment>
+                                        <string key="content">theQuiz is a trivia-based game. You get 1000 point for each correct answer plus a time bonus and streak bonus for each correct answer in streak. You will have 30 seconds for each question - if the timer expires before you give an answer, you will not get any points and the next question will be displayed. You can give wrong answer three times per game session, after that game will be ended.</string>
+                                        <attributes>
+                                            <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <font key="NSFont" size="17" name="GillSans"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enjoy playing!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="3wE-6W-YRz">
+                                <rect key="frame" x="20" y="250" width="107" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developer: Dmytro Cheverda" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="795-Lt-Igu">
+                                <rect key="frame" x="20" y="291" width="205" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="e-mail: dima.cheverda@gmail.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="meP-kC-AEt">
+                                <rect key="frame" x="20" y="313" width="233" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="17"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
