update to Quizium

--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -49,11 +49,11 @@
                                 </connections>
                             </button>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="51U-w5-j4s">
-                                <rect key="frame" x="20" y="80" width="280" height="155"/>
+                                <rect key="frame" x="13" y="83" width="295" height="155"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <attributedString key="attributedText">
-                                    <fragment content="theQuiz">
+                                    <fragment content="Quizium">
                                         <attributes>
                                             <color key="NSColor" red="0.33557421457585473" green="0.51907703488372092" blue="0.38982353745061094" alpha="1" colorSpace="calibratedRGB"/>
                                             <font key="NSFont" size="66" name="GillSans-Bold"/>
@@ -344,9 +344,9 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <attributedString key="attributedText">
                                     <fragment>
-                                        <string key="content">theQuiz is a trivia-based game. You get 1000 point for each correct answer plus a time bonus and streak bonus for each correct answer in streak. You will have 30 seconds for each question - if the timer expires before you give an answer, you will not get any points and the next question will be displayed. You can give wrong answer three times per game session, after that game will be ended.</string>
+                                        <string key="content">Quizium is a trivia-based game. You get 1000 point for each correct answer plus a time bonus and streak bonus for each correct answer in streak. You will have 30 seconds for each question - if the timer expires before you give an answer, you will not get any points and the next question will be displayed. You can give wrong answer three times per game session, after that game will be ended.</string>
                                         <attributes>
-                                            <color key="NSColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="NSColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <font key="NSFont" size="17" name="GillSans"/>
                                             <paragraphStyle key="NSParagraphStyle" alignment="left" lineBreakMode="wordWrapping" baseWritingDirection="natural"/>
                                         </attributes>
@@ -497,6 +497,8 @@
     </scenes>
     <resources>
         <image name="clock.png" width="26" height="26"/>
+        <image name="errorDisabled.png" width="26" height="26"/>
+        <image name="errorDisabled.png" width="26" height="26"/>
         <image name="errorDisabled.png" width="26" height="26"/>
     </resources>
     <color key="tintColor" red="0.28699062209999998" green="0.4803930475" blue="0.32050878160000001" alpha="1" colorSpace="calibratedRGB"/>
