--- a/Guess Who/MainStoryboard.storyboard
+++ b/Guess Who/MainStoryboard.storyboard
@@ -188,7 +188,7 @@
                                 <color key="progressTintColor" red="0.11687932788305984" green="0.47807368636131287" blue="0.19985503418145192" alpha="1" colorSpace="calibratedRGB"/>
                                 <color key="trackTintColor" red="0.70559290213178294" green="0.2084372889082339" blue="0.21609434348329737" alpha="1" colorSpace="calibratedRGB"/>
                             </progressView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="clock.png" id="yOZ-rs-2Tf">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="clock_flat.png" id="yOZ-rs-2Tf">
                                 <rect key="frame" x="20" y="393" width="26" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -496,7 +496,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="clock.png" width="26" height="26"/>
+        <image name="clock_flat.png" width="128" height="128"/>
         <image name="errorDisabled.png" width="26" height="26"/>
         <image name="footerImage.png" width="320" height="80"/>
     </resources>
